force-app/main/default/objects/Share_Class__c/fields/Action_to_Take__c.field-meta.xml
<CustomField>
    <fullName>Action_to_Take__c</fullName>
    <formula>IF(
    AND(
         Rule_1__c,
         Rule_2__c,
         Rule_5__c,
         Rule_6__c
    )
    ,&quot;BUY&quot;
    ,IF(
        Rule_7__c,
        &quot;SELL&quot;,
        &quot;HOLD&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Buy, Sell, or Hold</inlineHelpText>
    <label>Action to Take</label>
    <type>Text</type>
</CustomField>