force-app/main/default/objects/Share_Class__c/fields/Average_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Unit_Price__c</fullName>
    <formula>Book_Cost__c /  Units__c</formula>
    <label>Average Unit Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>