force-app/main/default/objects/Share_Class__c/fields/Book_Cost__c.field-meta.xml
<CustomField>
    <fullName>Book_Cost__c</fullName>
    <label>Book Cost</label>
    <summarizedField>Transaction__c.Cost__c</summarizedField>
    <summaryForeignKey>Transaction__c.Share_Class__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>