force-app/main/default/objects/Share_Class__c/fields/Current_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Price__c</fullName>
    <inlineHelpText>Current Price per unit of the security</inlineHelpText>
    <label>Current Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>