force-app/main/default/objects/Share_Class__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <formula>IF(Units__c &gt;0,
Units__c * IF(Current_Price__c = 0,  Average_Unit_Price__c  , Current_Price__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>