force-app/main/default/objects/Share_Class__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <label>Distribution</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Distribution_Type</valueSetName>
    </valueSet>
</CustomField>