force-app/main/default/objects/Share_Class__c/fields/Estimated_Annual_Dividend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Dividend__c</fullName>
    <formula>No_Dividends_Annually__c *  Highest_Dividend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annual Dividend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>