force-app/main/default/objects/Share_Class__c/fields/Gain__c.field-meta.xml
<CustomField>
    <fullName>Gain__c</fullName>
    <formula>IF(Book_Cost__c = 0, 0, (Current_Value__c /  Book_Cost__c )-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gain (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>