force-app/main/default/objects/Share_Class__c/fields/Highest_Dividend__c.field-meta.xml
<CustomField>
    <fullName>Highest_Dividend__c</fullName>
    <label>Highest Dividend</label>
    <summarizedField>Dividend__c.Dividend__c</summarizedField>
    <summaryForeignKey>Dividend__c.Share_Class__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>