force-app/main/default/objects/Share_Class__c/fields/ISIN__c.field-meta.xml
<CustomField>
    <fullName>ISIN__c</fullName>
    <label>ISIN</label>
    <length>12</length>
    <type>Text</type>
</CustomField>