force-app/main/default/objects/Share_Class__c/fields/Last_Dividend__c.field-meta.xml
<CustomField>
    <fullName>Last_Dividend__c</fullName>
    <label>Last Dividend</label>
    <summarizedField>Dividend__c.Date__c</summarizedField>
    <summaryForeignKey>Dividend__c.Share_Class__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>