force-app/main/default/objects/Share_Class__c/fields/Lowest_Price_Paid__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Price_Paid__c</fullName>
    <label>Lowest Price Paid</label>
    <summarizedField>Transaction__c.Unit_Price__c</summarizedField>
    <summaryForeignKey>Transaction__c.Share_Class__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>