force-app/main/default/objects/Share_Class__c/fields/Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee__c</fullName>
    <label>Management Fee</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>