force-app/main/default/objects/Share_Class__c/fields/Next_Dividend__c.field-meta.xml
<CustomField>
    <fullName>Next_Dividend__c</fullName>
    <formula>ADDMONTHS(Last_Dividend__c,  12 / No_Dividends_Annually__c)</formula>
    <label>Next Dividend</label>
    <type>Date</type>
</CustomField>