force-app/main/default/objects/Share_Class__c/fields/Next_Expected_Dividend__c.field-meta.xml
<CustomField>
    <fullName>Next_Expected_Dividend__c</fullName>
    <formula>Book_Cost__c *  Yield__c /  No_Dividends_Annually__c</formula>
    <label>Next Expected Dividend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>