force-app/main/default/objects/Share_Class__c/fields/No_Dividends_Annually__c.field-meta.xml
<CustomField>
    <fullName>No_Dividends_Annually__c</fullName>
    <label>No. Dividends Annually</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>