force-app/main/default/objects/Share_Class__c/fields/Price_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_Entered_Date__c</fullName>
    <label>Price Entered Date</label>
    <type>DateTime</type>
</CustomField>