force-app/main/default/objects/Share_Class__c/fields/Rule_1__c.field-meta.xml
<CustomField>
    <fullName>Rule_1__c</fullName>
    <formula>AND(
    Yield__c &gt;= 0.05
    ,
    Yield__c &lt;= 0.125
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Return between 5 and 12.5%</inlineHelpText>
    <label>Rule 1</label>
    <type>Checkbox</type>
</CustomField>