force-app/main/default/objects/Share_Class__c/fields/Rule_2__c.field-meta.xml
<CustomField>
    <fullName>Rule_2__c</fullName>
    <formula>(Current_Price__c /  Average_Unit_Price__c) &lt; 0.85</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Must be 15% off</inlineHelpText>
    <label>Rule 2</label>
    <type>Checkbox</type>
</CustomField>