force-app/main/default/objects/Share_Class__c/fields/Rule_5__c.field-meta.xml
<CustomField>
    <fullName>Rule_5__c</fullName>
    <formula>HOUR(TIMENOW()) &gt;= 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Don&apos;t Trade before 10 AM</inlineHelpText>
    <label>Rule 5</label>
    <type>Checkbox</type>
</CustomField>