force-app/main/default/objects/Share_Class__c/fields/SEDOL__c.field-meta.xml
<CustomField>
    <fullName>SEDOL__c</fullName>
    <label>SEDOL</label>
    <length>7</length>
    <type>Text</type>
</CustomField>