force-app/main/default/objects/Share_Class__c/fields/Target_Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Buy_Price__c</fullName>
    <formula>((MFLOOR( 200 / (Average_Unit_Price__c * 0.85)) * Average_Unit_Price__c) - 12) / MFLOOR( 200 / (Average_Unit_Price__c * 0.85))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Buy Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>