force-app/main/default/objects/Share_Class__c/fields/Target_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Sell_Price__c</fullName>
    <formula>((Book_Cost__c * 2) + 12 )/  Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Sell Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>