force-app/main/default/objects/Share_Class__c/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <label>Ticker Symbol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>