force-app/main/default/objects/Share_Class__c/fields/Total_Dividends__c.field-meta.xml
<CustomField>
    <fullName>Total_Dividends__c</fullName>
    <label>Total Dividends</label>
    <summarizedField>Dividend__c.Dividend__c</summarizedField>
    <summaryForeignKey>Dividend__c.Share_Class__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>