force-app/main/default/objects/Share_Class__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <summarizedField>Transaction__c.Units__c</summarizedField>
    <summaryForeignKey>Transaction__c.Share_Class__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>