force-app/main/default/objects/Share_Class__c/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <formula>Estimated_Annual_Dividend__c /  Book_Cost__c</formula>
    <label>Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>