force-app/main/default/objects/Share_Class__c/recordTypes/Fund_Share_Class.recordType-meta.xml
<RecordType>
    <fullName>Fund_Share_Class</fullName>
    <active>true</active>
    <label>Fund Share Class</label>
</RecordType>