force-app/main/default/objects/Share_Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fund__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Action_to_Take__c</columns>
    <columns>Book_Cost__c</columns>
    <columns>Units__c</columns>
    <columns>Average_Unit_Price__c</columns>
    <columns>Management_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Units__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>