force-app/main/default/objects/Share_Class__c/listViews/Fund_Share_Class.listView-meta.xml
<ListView>
    <fullName>Fund_Share_Class</fullName>
    <columns>NAME</columns>
    <columns>Current_Value__c</columns>
    <columns>Gain__c</columns>
    <columns>Current_Price__c</columns>
    <columns>Price_Entered_Date__c</columns>
    <columns>Yield__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Share_Class__c.Fund_Share_Class</value>
    </filters>
    <filters>
        <field>Units__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Fund Share Class</label>
</ListView>