force-app/main/default/objects/Share_Class__c/listViews/Stocks.listView-meta.xml
<ListView>
    <fullName>Stocks</fullName>
    <columns>Ticker_Symbol__c</columns>
    <columns>NAME</columns>
    <columns>Action_to_Take__c</columns>
    <columns>Current_Value__c</columns>
    <columns>Gain__c</columns>
    <columns>Current_Price__c</columns>
    <columns>Price_Entered_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Share_Class__c.Stock</value>
    </filters>
    <label>Stocks</label>
</ListView>